# AA-SI_aalibrary

./: .gitignore  .pylintrc  404.html  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  index.html  ingestion.py  installation_test.py  mkdocs.yml  objects.inv  panel_demo.ipynb  pyproject.toml  quick_api_test.py  quick_test.py  run.py  setup.py  timings.py  utils.py
.github/workflows/: format-python.yaml  python-app.yml  static.yml
aalibrary/: __init__.py  ingestion.py
about/disclaimer/: index.html
about/external_resources/: index.html
about/license/: index.html
about/notice/: index.html
app/: config.py  ingestion.py  requirements.txt  routes.py
app/utils/: cloud_utils.py  helpers.py  utils.py
docker/: Dockerfile  README.md  download-raw-azure.py  gcloud_login.sh  google-cloud-login.sh  test_entrypoint.py
docs/: index.md
docs/about/: disclaimer.md  external_resources.md  license.md  notice.md
docs/documentation/: aalibrary.md  console_tools.md  gcp_overview.md  raw_file.md  tugboat_api.md  utils.md
docs/getting-started/: installation.md  permissions.md  testing.md  usage.md  video-tutorials.md  workshop.md
docs/prompts/: console-tooling.json  console-tooling.txt  training.md
docs/troubleshooting/: troubleshooting.md
docs/usage/: configuration.md  conversions.md  downloads.md  scripts.md  tugboat.md  uploads.md
documentation/aalibrary/: index.html
documentation/console_tools/: index.html
documentation/gcp_overview/: index.html
documentation/raw_file/: index.html
documentation/tugboat_api/: index.html
documentation/utils/: index.html
getting-started/installation/: index.html
getting-started/permissions/: index.html
getting-started/testing/: index.html
getting-started/usage/: index.html
getting-started/video-tutorials/: index.html
getting-started/workshop/: index.html
other/: compare_local_to_NCEI.ipynb  coriolix_api.py  gcp_file_deletion_job.py  generate_console_tools_docs.ipynb  init_timing_test.sh  inport-dmp-xml.xml  inport_validations.ipynb  nncei_metadata_backfilling.ipynb  sample-inport-dmp.xml  test_tugboat_validation_submission.json  total_file_identifier.ipynb  tugboat_empty_submission_template.json  workshop_demo.ipynb
other/scripts/: daily_ncei_cache.ipynb  mount_google_cloud_storage_on_workstation.sh  multi-fetch-algo-template.yaml
prompts/: console-tooling.json  console-tooling.txt
search/: search_index.json
src/aalibrary/: __init__.py  __main__.py  config.py  conversion.py  egress.py  ices_ship_names.py  ingestion.py  metadata.py  queries.py  quick_test.py  raw_file.py  requirements.txt  routes.py  survey.py  tugboat_api.py
src/aalibrary/api_logic/: api_functions.py
src/aalibrary/console/: aa_absorption.py  aa_abundance.py  aa_aggregation.py  aa_attenuated.py  aa_center_of_mass.py  aa_clean.py  aa_coerce_time.py  aa_combine.py  aa_crop.py  aa_depth.py  aa_detect_seafloor.py  aa_detect_shoal.py  aa_detect_transient.py  aa_dispersion.py  aa_ed.py  aa_evenness.py  aa_evl.py  aa_evr.py  aa_fetch.py  aa_find.py  aa_freqdiff.py  aa_get.py  aa_graph.py  aa_guide.py  aa_help.py  aa_impulse.py  aa_location.py  aa_min.py  aa_mvbs.py  aa_mvbs_index.py  aa_nasc.py  aa_nc.py  aa_noise_est.py  aa_plot.py  aa_raw.py  aa_refresh.py  aa_setup.py  aa_show.py  aa_sonar.py  aa_sound_speed.py  (+8 more)
src/aalibrary/utils/: __init__.py  cloud_utils.py  discrepancies.py  frequency_data.py  gcp_utils.py  get_datagram_data.py  helpers.py  ices.py  multi_fetch_yaml_parser.py  nc_reader.py  ncei_cache_utils.py  ncei_utils.py  raw_fetch_schedule_builder.py  region_draw.py  timings.py  tugboat_validations.py
src/aalibrary/utils/_help/: config.py  context.py  executor.py  plan.py  (+8 more)
tests/: conftest.py  install_linux.sh  test_business_use_cases.py  test_conversion.py  test_ingestion.py  test_metadata.py  test_raw_file.py  test_resources.py  test_sonar_checker.py  test_utils.py
troubleshooting/troubleshooting/: index.html
usage/configuration/: index.html
usage/conversions/: index.html
usage/downloads/: index.html
usage/scripts/: index.html
usage/tugboat/: index.html
usage/uploads/: index.html
(+6 files in other folders)
