[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/aalibrary/__about__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["src/aalibrary/requirements.txt"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[project]
name = "aalibrary"
dynamic = [
 "version",
 "dependencies"
]

# Declare dynamic fields

authors = [
  { name="Hannan Khan", email="hannan.khan@noaa.gov" },
]
maintainers = [
  { name="Hannan Khan", email="hannan.khan@noaa.gov" },
]
description = "A data-fetching library created for NOAA's Active-Acoustics initiative."
readme = "README.md"
requires-python = ">=3.8"


[project.urls]
Homepage = "https://github.com/nmfs-ost/AA-SI_aalibrary"
Documentation = "https://nmfs-ost.github.io/AA-SI_aalibrary/"
Issues = "https://github.com/nmfs-ost/AA-SI_aalibrary/issues"
Repository = "https://github.com/nmfs-ost/AA-SI_aalibrary"
Changelog = "https://github.com/nmfs-ost/AA-SI_aalibrary/blob/main/CHANGELOG.md"

[project.scripts]
aa-raw = "aalibrary.console.aa_raw:main"
aa-nc = "aalibrary.console.aa_nc:main"
aa-plot = "aalibrary.console.aa_plot:main"
aa-help = "aalibrary.console.aa_help:main"
aa-test = "aalibrary.console.aa_test:main"
aa-find = "aalibrary.console.aa_find:main"
aa-setup = "aalibrary.console.aa_setup:main"
aa-clean = "aalibrary.console.aa_clean:main"
aa-mvbs = "aalibrary.console.aa_mvbs:main"
aa-nasc = "aalibrary.console.aa_nasc:main"
aa-sv = "aalibrary.console.aa_sv:main"
aa-ts = "aalibrary.console.aa_ts:main"
aa-min = "aalibrary.console.aa_min:main"
aa-depth = "aalibrary.console.aa_depth:main"
aa-show = "aalibrary.console.aa_show:main"

aa-impulse = "aalibrary.console.aa_impulse:main"
aa-transient = "aalibrary.console.aa_transient:main"
aa-attenuated = "aalibrary.console.aa_attenuated:main"
aa-noise-est = "aalibrary.console.aa_noise_est:main"
aa-detect-transient = "aalibrary.console.aa_detect_transient:main"
aa-mvbs-index = "aalibrary.console.aa_mvbs_index:main"
aa-swap-freq = "aalibrary.console.aa_swap_freq:main"
aa-coerce-time = "aalibrary.console.aa_coerce_time:main"
aa-splitbeam-angle = "aalibrary.console.aa_splitbeam_angle:main"
aa-freqdiff = "aalibrary.console.aa_freqdiff:main"
